--- a/dashboard/css/login.css
+++ b/dashboard/css/login.css
@@ -221,3 +221,50 @@ a:hover{
 		justify-content: center;
 	}
 }
+
+/* Add the heart icon and tooltip styles */
+.floating-heart {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #ff5555;
+  color: #fff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.floating-heart i {
+  font-size: 24px;
+}
+
+.tooltip {
+  position: absolute;
+  background-color: #333;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  bottom: 50px;
+  right: 50px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
+
+.inline-text {
+  display: inline-block; /* Make the text inline */
+  margin-left: 5px; /* Add some spacing between "Made by" and "Science Gear" */
+}
+
+.floating-heart:hover {
+  background-color: #ff3333;
+}
+
+.floating-heart:hover .tooltip {
+  opacity: 1;
+}
